syntax = "proto3";

package dev.matvenoid.proto;

option java_multiple_files = true;

message Review {
  int64 id = 1;
  int32 rating = 2;
  string comment = 3;
  string created_at = 4;
  string updated_at = 5;
  int64 user_id = 6;
  int64 property_id = 7;
}

message GetReviewsRequest {}

message GetReviewsResponse {
  repeated Review review = 1;
}