syntax = "proto3";

package dev.matvenoid.proto;

option java_multiple_files = true;

message User {
  int64 id = 1;
  string name = 2;
  string phone = 3;
  string birthday = 4;
}

message UserRequest {
  int64 id = 1;
  string name = 2;
  string phone = 3;
  string birthday = 4;
}

message UserResponse {
  optional User user = 1;
}

message UserIdRequest {
  int64 id = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message Empty {}
